Responsivo/Pergunta Inicial/Cartas novas.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <div class="titulo">PARROT CARD GAME</div>
     </header>
 
+    <div class="timer">
+        
+    </div>
+
     <div class="conteudo">
     </div>
     <script src="script.js"></script>
